feature(Auth): Ajout de l'auth et refacto de la base de donnée.
