# src/main/java/org/celtek/cuisineapi/infrastructure/persistence/entity/UserEntity.java
@@ -1,0 +1,30 @@
+package org.celtek.cuisineapi.infrastructure.persistence.entity;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+@Entity
+@Table(name = "users")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class UserEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false, unique = true)
+    private String email;
+
+    @Column(nullable = false)
+    private String password;
+
+    @Column(nullable = false)
+    private String pseudo;
+
+    @Column(nullable = false)
+    private String role;
+}
